# mycode

./: .gitattributes  .gitmodules  .pre-commit-config.yaml  .typos.toml  Cargo.toml  deny.toml  typos.toml
.claude/: settings.local.json
gba/: .gitignore  Cargo.toml  QUICKSTART.md  TEMPLATE-REVIEW-CHECKLIST.md  WORKSPACE.md  verification-checklist.md
gba/.chats/: 20260124.md
gba/.claude/: settings.local.json
gba/apps/gba-cli/: Cargo.toml
gba/apps/gba-cli/src/: main.rs  ui.rs
gba/apps/gba-cli/src/commands/: init.rs  list.rs  mod.rs  plan.rs  run.rs  status.rs
gba/crates/gba-core/: Cargo.toml
gba/crates/gba-core/src/: lib.rs  state.rs
gba/crates/gba-pm/: Cargo.toml
gba/crates/gba-pm/src/: lib.rs
gba/crates/gba-pm/templates/: README.md  STRUCTURE.md  init.md  phase_1_observe.md  phase_2_build.md  phase_3_test.md  phase_4_verification.md  phase_5_review.md  phase_6_pr.md  plan.md
gba/crates/gba-pm/templates/init/: system.md
gba/crates/gba-pm/templates/system/: architect.md  devops.md  qa.md  reviewer.md
gba/crates/gba-pm/templates/user/: phase_2_build.md  phase_3_test.md  phase_4_verification.md  phase_5_review.md
gba/prompts/init/: config.yml
gba/prompts/observe/: config.yml  user.md
gba/prompts/plan/: config.yml  user.md
gba/prompts/pr/: config.yml  user.md
gba/prompts/review/: config.yml
gba/prompts/test/: config.yml  system.md
gba/prompts/verification/: config.yml
gba/specs/: DESIGN-UPDATES-COMPLETE.md  FINAL-DESIGN-UPDATES-SUMMARY.md  FINAL-UPDATE-SUMMARY.md  SUMMARY.md  claude-sdk-notes.md  design-comparison.md  design-improvements-summary.md  design-simplification-complete.md  design-update-complete.md  design-updates-phase-management.md  design.md  implementation-summary.md  migration-to-tyrchen-sdk.md  phases-configuration-flow.md  template-refactoring-summary.md  template-reorganization-complete.md  template-simplification-summary.md  template-variables-review.md  using-tyrchen-sdk.md
