[workspace]
resolver = "2"
members = [
    "crates/gba-core",
    "crates/gba-pm",
    "apps/gba-cli",
]

[workspace.package]
version = "0.1.0"
authors = ["Your Name <YourName@yourdomain.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/TODO"
homepage = "https://github.com/TODO"
rust-version = "1.90"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util", "sync", "time"] }

# Concurrency primitives
parking_lot = "0.12"
dashmap = "6.1"

# Claude Agent SDK (tyrchen's implementation)
# Using crates.io version (stable)
claude-agent-sdk-rs = "0.6"
futures = "0.3"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
ratatui = "0.29"
crossterm = "0.28"

# Template engine
minijinja = { version = "2.15", features = ["loader"] }

# Utilities
glob = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Internal workspace crates
gba-core = { path = "crates/gba-core" }
gba-pm = { path = "crates/gba-pm" }
