[package]
name = "gba-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core execution engine for Geektime Bootcamp Agent"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
claude-agent-sdk-rs = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
