[package]
name = "gba-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core execution engine for Geektime Bootcamp Agent"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true }
claude-agent-sdk-rs = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
gba-pm = { workspace = true }

[dev-dependencies]
tempfile = "3.15"
